force-app/main/default/objects/Job_Application__c/fields/Hightest_Rating__c.field-meta.xml
<CustomField>
    <fullName>Hightest_Rating__c</fullName>
    <label>Hightest Rating</label>
    <summarizedField>Review__c.Rating__c</summarizedField>
    <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>