force-app/main/default/objects/Job_Application__c/fields/Number_Of_Best_Review__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Best_Review__c</fullName>
    <label>Number Of Best Review</label>
    <summaryFilterItems>
        <field>Review__c.Rating__c</field>
        <operation>greaterOrEqual</operation>
        <value>4</value>
    </summaryFilterItems>
    <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>