force-app/main/default/objects/Job_Application__c/fields/Number_Of_Review__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Review__c</fullName>
    <label>Number Of Review</label>
    <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>